# sparkle-workflow-test

./: .gitignore  .prettierignore  README.md  build.js  electron.vite.config.mjs  eslint.config.mjs  get.ps1  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
.github/workflows/: build.yml
docs/: README.md  index.js  main.py  mkdocs.yml  package.json  pyproject.toml
docs/docs/: CNAME  apps.md  cleaner.md  creating-tweaks.md  dns-manager.md  index.md  uninstall.md  utilities.md
docs/docs/css/: extra.css
docs/docs/js/: extra.js
docs/docs/tweaks/: align-taskbar-left.md  debloat-windows.md  detailed-bsod.md  disable-background-ms-store-apps.md  disable-copilot.md  disable-core-isolation.md  disable-defender-rtp.md  disable-dynamic-ticking.md  disable-fast-startup.md  disable-gamebar.md  disable-hibernation.md  disable-location-tracking.md  disable-lockscreen-tips.md  disable-mouse-acceleration.md  disable-wifi-sense.md  enable-dark-mode.md  enable-end-task-right-click.md  enable-game-mode.md  enable-hags.md  enable-optimization-for-windowed-games.md  index.md  menu-show-delay-zero.md  optimize-network-settings.md  optimize-nvidia-settings.md  remove-gaming-apps.md  remove-onedrive.md  revert-context-menu.md  run-disk-cleanup.md  set-powershell7-default.md  set-services-to-manual.md  set-time-utc.md  set-win32-priority-separation.md  show-seconds-in-taskbar-clock.md  ultimate-performance-plan.md
resources/: sparklenvidia.nip
scripts/dns-changer/: apply.ps1  unapply.ps1
src/main/: rpc.ts  (+9 more)
tweaks/: readme.md  registry-scripts.json  registry.json
(+137 files in other folders)
