[project]
name = "docs"
version = "0.1.0"
description = "Sparkle documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.18",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.16.1",
]
